# quiz-telegram-bot

./: .gitignore  Dockerfile  Makefile  README.md  bot.py  config.py  database.py  docker-compose.yaml  env.example  google_sheets.py  pyproject.toml  quiz_logic.py  run.sh  scheduler.py
docs/: product-requirements.md
questions/: grammar.csv  idioms.csv  reading.csv  vocabulary.csv
